--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/db53089d8d00a4af7ac8a9d8769dbb03.data.br",
-        frameworkUrl: buildUrl + "/905bfe969b5886fc85e4cfb638ae90b4.js.br",
-        codeUrl: buildUrl + "/ad9fa96b1f30fbe9d665fa47c0a69395.wasm.br",
+        dataUrl: buildUrl + "/13ad57a962f45b5411d41b1d9f2d873c.data.unityweb",
+        frameworkUrl: buildUrl + "/905bfe969b5886fc85e4cfb638ae90b4.js.unityweb",
+        codeUrl: buildUrl + "/ad9fa96b1f30fbe9d665fa47c0a69395.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "NewMediaCenter",
         productName: "合成新媒体",
