--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/13ad57a962f45b5411d41b1d9f2d873c.data.unityweb",
-        frameworkUrl: buildUrl + "/905bfe969b5886fc85e4cfb638ae90b4.js.unityweb",
-        codeUrl: buildUrl + "/ad9fa96b1f30fbe9d665fa47c0a69395.wasm.unityweb",
+        dataUrl: buildUrl + "/a27d0316c740af53e4ff1da53a023809.data",
+        frameworkUrl: buildUrl + "/905bfe969b5886fc85e4cfb638ae90b4.js",
+        codeUrl: buildUrl + "/ad9fa96b1f30fbe9d665fa47c0a69395.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "NewMediaCenter",
         productName: "合成新媒体",
