--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>!!快来一起合成新媒体!!</title>
+    <title>Unity WebGL Player | 合成新媒体</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="manifest" href="manifest.webmanifest">
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/a27d0316c740af53e4ff1da53a023809.data",
-        frameworkUrl: buildUrl + "/905bfe969b5886fc85e4cfb638ae90b4.js",
-        codeUrl: buildUrl + "/ad9fa96b1f30fbe9d665fa47c0a69395.wasm",
+        dataUrl: buildUrl + "/654df03121413d0c84d5bb1eb74a55d7.data",
+        frameworkUrl: buildUrl + "/3c70ae2897b41ace54720c8be43ae4a9.js",
+        codeUrl: buildUrl + "/cae3789ef1b42ff1632016f957f470a7.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "NewMediaCenter",
         productName: "合成新媒体",
