--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | 合成新媒体</title>
+    <title>！快来一起合成新媒体！</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="manifest" href="manifest.webmanifest">
@@ -59,7 +59,7 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/654df03121413d0c84d5bb1eb74a55d7.data",
+        dataUrl: buildUrl + "/7c9bae665703f9b6e1361f30cd0cb452.data",
         frameworkUrl: buildUrl + "/3c70ae2897b41ace54720c8be43ae4a9.js",
         codeUrl: buildUrl + "/cae3789ef1b42ff1632016f957f470a7.wasm",
         streamingAssetsUrl: "StreamingAssets",
