--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>一起新媒体！</title>
+    <title>一起新媒体</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="manifest" href="manifest.webmanifest">
@@ -59,7 +59,7 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/3eb04e5c72eeabc0a06e54b899cd58bf.data",
+        dataUrl: buildUrl + "/2293e5669aa68e9143e5ca9dfed86e72.data",
         frameworkUrl: buildUrl + "/15125cb4636261da1b06655f320d0768.js",
         codeUrl: buildUrl + "/af68394d650a9999e204c314ee067c74.wasm",
         streamingAssetsUrl: "StreamingAssets",
